--- a/style.css
+++ b/style.css
@@ -77,28 +77,33 @@ header.scroll {
 
 a.logo {
   display: inline-block;
-  font-size: 10pt;
-  font-weight: 700;
-  margin: 5vh 3vw 5vh 3vw;
-  padding: 5vh 2vw 5vh 2vw;
-  color: rgb(62,57,59);
   text-decoration: none;
-  transition: 0.5s ease;
+  transition: color 0.5s ease;
+  font-size: 30pt;
+  font-weight: 700;
+  padding: 30vh 0vw 5vh 5vw;
+  line-height: 130%;
+  height: auto;
+  color: rgb(187,187,187);
+}
+
+@media only screen and (max-width: 700px) {
+  a.logo {font-size: 21pt;}
 }
 
 a.logo.morning:hover {
   color: rgb(255,170,225);
-  transition: 0.5s ease;
+  transition: color 0.5s ease;
 }
 
 a.logo.afternoon:hover {
   color: rgb(135,187,244);
-  transition: 0.5s ease;
+  transition: color 0.5s ease;
 }
 
 a.logo.evening:hover {
   color: rgb(211,168,54);
-  transition: 0.5s ease;
+  transition: color 0.5s ease;
 }
 
 a.welcome {
@@ -130,9 +135,15 @@ body
 p.statement {
   font-size: 30pt;
   font-weight: bold;
-  padding: 20vh 15vw 45vh 15vw;
+  width: 65vw;
+  padding: 20vh 15vw 45vh 5vw;
+  padding: 5vh 0vw 15vh 5vw;
   line-height: 130%;
   height: auto;
+}
+
+@media only screen and (max-width: 700px) {
+  p.statement {font-size: 21pt;}
 }
 
 h1 {
@@ -144,18 +155,25 @@ h1 {
 }
 
 h2 {
-  font-size: 30pt;
+  font-size: 12pt;
   font-weight: 600;
   color: rgb(255,255,255);
   line-height: 120%;
   width: 70vw;
   text-align: left;
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 93%;
+  left: 42%;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+}
+
+.year {
+  top: 7%;
+  left: 42%;
+  opacity: 0;
+  transition: opacity 1.5s ease;
 }
 
 section {
@@ -165,11 +183,30 @@ section {
 .container {
   position: relative;
   width: 90vw;
+  height: auto;
+  overflow: hidden;
   margin: 0px 0px 100px 5vw;
+}
+
+@media only screen and (max-width: 700px) {
+  section {
+    padding: 50px 0vw 50px 0px;
+  }
+  h2 {
+    font-size: 8pt;
+  }
+  .container {
+    margin: 0px 0px 50px 5vw;
+  }
 }
 
 .container:hover .overlay {
   opacity: 0.1;
+  transition: opacity 1.5s ease;
+}
+
+.container:hover .year {
+  opacity: 1;
   transition: opacity 1.5s ease;
 }
 
@@ -181,23 +218,20 @@ section {
   right: 0;
   height: 100%;
   width: 90vw;
-  opacity: 1;
+  opacity: 0.8;
   background-color: rgb(0,0,0);
   transition: opacity 1.5s ease;
 }
 
 div.color1 {
-  background-color: rgb(187,83,118);
   background-color: rgb(12,7,9);
 }
 
 div.color2 {
-  background-color: rgb(1,1,1);
   background-color: rgb(12,7,9);
 }
 
 div.color3 {
-  background-color: rgb(47,151,114);
   background-color: rgb(12,7,9);
 }
 
@@ -215,7 +249,6 @@ div.experience {
   display: inline-block;
   position: relative;
   text-align: left;
-  width: 350px;
   width: 400px;
   padding: 30px 0vw;
 }
@@ -240,9 +273,21 @@ p.experience {
   font-size: 12pt;
   left: -65px;
   top: 30px;
-  color: rgb(187,187,187);
   color: rgb(62,57,59);
+  opacity: 1;
 }
+
+@media only screen and (max-width: 700px) {
+  .experience p.date {
+    opacity: 0;
+  }
+  div.container2 {
+    text-align: left;
+    padding-left: 5vw;
+  }
+
+}
+
 
 img.love {
   display: block;
@@ -326,7 +371,7 @@ a.back {
   padding: 5vh 2vw 5vh 2vw;
   color: rgb(62,57,59);
   text-decoration: none;
-  transition: 0.5s ease;
+  transition: color 0.5s ease;
 }
 
 .title {
@@ -359,7 +404,7 @@ a.back {
   display: block;
   clear: both;
   width: 450px;
-  padding: 0px 5vw 0px 5vw;
+  padding: 0px 0px 0px 5vw;
   line-height: 160%;
   font-size: 13pt;
   color: rgb(118,118,118);
@@ -368,6 +413,15 @@ a.back {
 
 .nav {
   text-decoration: none;
+  display: block;
+  clear: both;
+  width: 220px;
+  padding: 0px 0px 0px 5vw;
+  line-height: 160%;
+  font-size: 13pt;
+  color: rgb(118,118,118);
+  font-weight: 400;
+  transition: color 0.5s ease;
 }
 
 a.nav.morning:hover {
